--- a/deno.json
+++ b/deno.json
@@ -5,6 +5,7 @@
   "imports": {
     "@oak/oak": "jsr:@oak/oak@^17.1.4",
     "@std/assert": "jsr:@std/assert@1",
+    "@std/csv": "jsr:@std/csv@^1.0.5",
     "zod": "npm:zod@^4.0.0-beta.20250414T061543"
   }
 }
