--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,9 @@
 {
   "tasks": {
-    "dev": "deno run -A --env-file=.env --watch src/main.ts"
+    "dev": "deno run -A --env-file=.env --watch src/main.ts",
+    "typecheck": "deno check src/main.ts",
+    "build": "bash scripts/build.sh",
+    "run": "bash scripts/run.sh"
   },
   "imports": {
     "@oak/oak": "jsr:@oak/oak@^17.1.4",
